--- a/trunk/Resources.qrc
+++ b/trunk/Resources.qrc
@@ -1,8 +1,5 @@
 <RCC>
     <qresource prefix="/Icons">
-        <file alias="icon-add">Icons/add.png</file>
-        <file alias="appicon">Icons/appicon.png</file>
-        <file alias="icon-remove">Icons/remove.png</file>
         <file alias="icon-up">Icons/up.png</file>
         <file alias="icon-down">Icons/down.png</file>
         <file alias="folder-new-content">Icons/folder_bookmarks.png</file>
@@ -18,7 +15,7 @@
         <file>Icons/chat.png</file>
         <file>Icons/compress-folder.png</file>
         <file>Icons/error.png</file>
-        <file>Icons/file-audio.png</file>
+        <file alias="audiofile">Icons/file-audio.png</file>
         <file>Icons/folder_new.png</file>
         <file>Icons/folder-bookmarks.png</file>
         <file>Icons/folder-development.png</file>
@@ -28,16 +25,20 @@
         <file>Icons/folder-remote.png</file>
         <file>Icons/folder-saved-search.png</file>
         <file>Icons/folder-sound.png</file>
-        <file>Icons/important.png</file>
-        <file>Icons/info.png</file>
+        <file alias="warning">Icons/important.png</file>
+        <file alias="information">Icons/info.png</file>
         <file>Icons/mic2.png</file>
         <file>Icons/mic.png</file>
         <file>Icons/mic-note.png</file>
         <file>Icons/notes.png</file>
-        <file>Icons/preferences.png</file>
+        <file alias="preferences">Icons/preferences.png</file>
         <file>Icons/speaker.png</file>
         <file>Icons/speaker-note.png</file>
         <file>Icons/synchronize.png</file>
         <file>Icons/user.png</file>
+        <file alias="add">Icons/add.png</file>
+        <file alias="remove">Icons/remove.png</file>
+        <file alias="exit">Icons/exit.png</file>
+        <file alias="appicon">Icons/music-collaborator.png</file>
     </qresource>
 </RCC>
