--- a/MCMainWindow.ui
+++ b/MCMainWindow.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>:/Icons/icon-application</normaloff>:/Icons/icon-application</iconset>
+    <normaloff>:/Icons/appicon</normaloff>:/Icons/appicon</iconset>
   </property>
   <property name="dockNestingEnabled">
    <bool>false</bool>
@@ -154,7 +154,7 @@ selection-background-color: rgb(254, 255, 220);</string>
      <x>0</x>
      <y>0</y>
      <width>576</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -184,7 +184,7 @@ selection-background-color: rgb(254, 255, 220);</string>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="fileToolBar">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>File toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -196,7 +196,17 @@ selection-background-color: rgb(254, 255, 220);</string>
    <addaction name="separator"/>
    <addaction name="actionAdd_Project_Folder"/>
    <addaction name="actionRemove_Share"/>
-   <addaction name="separator"/>
+  </widget>
+  <widget class="QToolBar" name="toolsToolBar">
+   <property name="windowTitle">
+    <string>Tools toolbar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
    <addaction name="actionPreferences"/>
   </widget>
   <action name="actionE_xit">
